add: 댓글 삭제 버튼

--- a/chanyoung/css/main.css
+++ b/chanyoung/css/main.css
@@ -144,6 +144,12 @@
   content: url(/img/icon/fullheart.png);
 }
 
+.deleteButton {
+  content: url(/img/icon/cancel.png);
+  float: right;
+  width: 12px;
+}
+
 .commentsWrapper li a {
   margin-right: 5px;
   
